syntax = "proto3";
import "common.proto";

message FetchLevelsResponse {
  repeated LevelId levels = 1;
}

message CreateLobbyResponse {
  optional Lobby lobby = 1;
  Status status = 2;
}

message FetchLobbiesResponse {
  repeated Lobby lobbies = 1;
}

message JoinLobbyResponse {
  Status status = 1;
  PlayersList players = 2;
}

message LobbyFilledGameStartedRequest {
  InitialGameState state = 1;
}

message SendGameStateRequest {
  PlayerState player_state = 1;
  MapState map_state = 2;
}

message LeaveLobbyResponse {
  Status status = 1;
}